# cmake-library-example

./: .gitignore  CMakeLists.txt  README.md  dynamic.cpp  dynamic.h  main.cpp  static.cpp  static.h
